# proyecto-pln

./: .gitattributes  .gitignore  Cargo.toml  README.md  clean.py  justfile  pyproject.toml
cleaner-cli/: Cargo.toml
cleaner-cli/src/: args.rs  log.rs  main.rs
cleaner-lib/: Cargo.toml
cleaner-lib/src/: delimit.rs  lexer.rs  lib.rs
cleaner-py/: Cargo.toml  pyproject.toml
cleaner-py/cleaner/: __init__.py
cleaner-py/src/: lib.rs
embeddings/: bert_3000x250  bert_3000x512  bert_6000x100  spacy_250_150_500
modelos/: dtree_spacy.pkl  dtree_tfidf.pkl
notebooks/: Embeddings.ipynb  Untitled.ipynb  cleaner_tetst.ipynb  cleanup_strategies.ipynb  conv_spacy.keras  dtree.ipynb  fnn.ipynb  maps.ipynb  rforest.ipynb  svm.ipynb
reporte/: bib.yml  main.typ  template.typ
resources/: bigrams_words.json  conv_matrix_bert.json  conv_matrix_spacy_clean.json  dtree_matrix_bert.json  dtree_matrix_spacy_clean.json  dtree_matrix_spacy_dirty.json  dtree_matrix_tfidf_clean.json  dtree_matrix_tfidf_dirty.json  entries_per_lang.json  entries_per_lang_aungment.json  fnn_matrix_bert.json  fnn_matrix_spacy_clean.json  lines_of_code_per_lang.json  lines_of_code_per_lang_augment.json  rforest_matrix_bert.json  rforest_matrix_spacy_clean.json  rforest_matrix_tfifd_clean.json  svm_matrix_bert.json  svm_matrix_spacy_clean.json  svm_matrix_spacy_dirty.json  svm_matrix_tfidf_clean.json  svm_matrix_tfidf_dirty.json  trigrams_words.json  tsne_bert.json  tsne_bert_250.json  tsne_spacy.json  tsne_spacy_clean.json  tsne_spacy_dirty.json  tsne_tfidf_clean.json  tsne_tfidf_dirty.json  unigrams_words.json
scripts/: chunks.py  clean_empty.py  embeddings.py
streamlit/: Project.py  main.py
streamlit/pages/: 1 - Dataset.py  10 - Classifier.py  2 - N-Grams.py  3 - Augmentation.py  5 - SVM.py  6 - DTree.py  7 - Rand Forest.py  8 - FNN.py  9 - Convolutional.py  Classifier.py  t-SNE.py
