[package]
name = "cleaner-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ccleaner"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
cleaner-lib = { path = "../cleaner-lib" }
bstr.workspace = true
